--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
